--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,17 +9,37 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-16.04, ubuntu-18.04, ubuntu-20.04, macos-latest]
+        python-version: [3.5, 3.6, 3.7, 3.8, 3.9]
+
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
-      - name: Install Python 3
-        uses: actions/setup-python@v1
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.6
-      - name: Install dependencies
+          python-version: ${{ matrix.python-version }}
+
+      - name: Lint with Black
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          export FAKE_TORCH_HOME="fake_torch_dir"
+          cd ..
+          if [ "$RUNNER_OS" == "Windows" ]; then
+            python.exe -m pip install black
+            python.exe -m black qlib -l 120 --check --diff
+          else
+            python -m pip install black
+            python -m black qlib -l 120 --check --diff
+          fi
+        shell: bash
+
+      - name: Install nats_bench from source
+        run: |
+          python setup.py install
+
       - name: Run tests with pytest
-        run: pytest 
+        run: |
+          export FAKE_TORCH_HOME="fake_torch_dir"
+          python -m pytest . --durations=0
