--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,11 @@ jobs:
             python.exe -m black nats_bench -l 120 --check --diff
             python.exe -m black tests -l 120 --check --diff
           else
-            python --version
-            echo $PWD
             python -m pip install black
-            python -m black ./nats_bench -l 120 --check --diff --verbose
+            python --version
+            python -m black --version
+            echo $PWD
+            python -m black . -l 120 --check --diff --verbose
           fi
         shell: bash
 
